Fixed modal image not displaying properly on smaller screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -106,12 +106,11 @@ body{
 
 .push-modal-down {
     margin-top: 7.5em;
-    padding: 10rem;
 }
 
 .push-modal-x-down {
     margin-top: 5px;
-    padding: 5rem;
+    padding: 2.7rem;
 }
 
 .cart-bg {
@@ -185,6 +184,20 @@ body{
         padding: 50px;
     }
 }
+
+@media (max-width: 768px) {
+
+    .push-modal-down {
+        margin-top: 11em;
+    }
+
+    .push-modal-x-down {
+        padding: 0;
+        
+    
+    }
+}
+
 
   
   
